# schematic-converter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
schematicconverter/: converter.py
schematicconverter/helper/: __init__.py  helper_graph.py  helper_graph_elements.py  schematic_edge.py  schematic_graph.py  schematic_node.py  utils.py
schematicconverter/helper/algorithms/: __init__.py  horizontal_positioning.py  signal_processing.py  track_postprocessing.py  vertical_positioning.py
schematicconverter/helper/datastructures/: __init__.py  schematic_graph.py  schematic_node.py
schematicoverview/: __init__.py  schematic_overview.py  schematic_overview_elements.py
test/: complex_example_test.py
