[tool.poetry]
name = "schematicconverter"
version = "1.0"
description = "An schematic converter for yaramo topoloies"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
repository = "https://github.com/simulate-digital-rail/schematic-converter"
packages = [{include = "schematicconverter"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", branch = "yaramo2"}

[tool.poetry.group.example]
optional = true

[tool.poetry.group.example.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
