[tool.poetry]
name = "schematicconverter"
version = "1.0"
description = "An schematic converter for yaramo topoloies"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>", "Julian Berg <julian.berg@student.hpi.de>"]
readme = "README.md"
repository = "https://github.com/simulate-digital-rail/schematic-converter"
packages = [{include = "schematicconverter"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", branch = "yaramo2"}
planpro-importer = {git = "https://github.com/simulate-digital-rail/planpro-importer", branch = "yaramo2"}
scipy = "^1.16.1"
numpy = "^2.3.2"
pathlib = "^1.0.1"
pytest = "^8.4.1"
statistics = "^1.0.3.5"

[tool.poetry.group.example]
optional = true

[tool.poetry.group.example.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
